fix styles for home footer and vue slider overlapping

--- a/src/assets/sass/website/components/events/main-event-card.scss
+++ b/src/assets/sass/website/components/events/main-event-card.scss
@@ -5,7 +5,8 @@
 .main-event-card-wrapper {
   position: relative;
   height: 550px;
-  max-width: 300px;
+  max-width: 310px;
+  padding-right: 10px;
   margin: 5px;
   filter: drop-shadow(0 0 4px #175e90);
   cursor: pointer;
